[package]
name = "egui_winit_platform"
version = "0.20.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2018"
description = "Platform code to use egui with winit."
homepage = "https://github.com/hasenbanck/egui_winit_platform"
repository = "https://github.com/hasenbanck/egui_winit_platform"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
egui = { version = "0.25", default-features = false }
winit = { version = "0.29", default-features = false}
copypasta = { version = "0.10.0", optional = true }
webbrowser = { version = "0.8.12", optional = true }

[features]
linux_desktop = ["winit/wayland", "winit/x11"]
android-game-activity = ["winit/android-game-activity"]
android-native-activity = ["winit/android-native-activity"]
default = ["default_fonts"]
clipboard = ["copypasta"]
default_fonts = ["egui/default_fonts"]
